--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-19  Hendrik Brandt  <hebra@cvs.gnome.org>
+
+	* de.po: Updated German translation.
+
 2004-11-18  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
