Updated German translation (Bugfix).
2004-11-19  Hendrik Brandt  <hebra@cvs.gnome.org>

        * de.po: Updated German translation (Bugfix).

--- a/po/de.po
+++ b/po/de.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-11-19 17:36+0100\n"
-"PO-Revision-Date: 2004-11-19 18:04+0100\n"
+"PO-Revision-Date: 2004-11-19 18:38+0100\n"
 "Last-Translator: Hendrik Brandt <eru@gmx.li>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -586,7 +586,7 @@ msgstr "Kapitel"
 # CHECK Mitarbeiter?
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr "Mitwirkende/r"
+msgstr "Mitwirkender"
 
 # CHECK Mitarbeiter?
 #: stylesheets/l10n.xml.in.h:28
@@ -675,7 +675,7 @@ msgstr "Ursprung"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr "Weitere/r Mitwirkende/r"
+msgstr "Weiterer Mitwirkender"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
