--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-19  Hendrik Brandt  <hebra@cvs.gnome.org>
 
+	* de.po: Updated German translation (Bugfix).
+
+2004-11-19  Hendrik Brandt  <hebra@cvs.gnome.org>
+
 	* de.po: Updated German translation.
 
 2004-11-18  Adam Weinberger  <adamw@gnome.org>
