--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-20  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-11-19  Hendrik Brandt  <hebra@cvs.gnome.org>
 
 	* de.po: Updated German translation (Bugfix).
