- Various man xslt additions
* stylesheets/man2html.xsl:
- Various man xslt additions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-21  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/man2html.xsl:
+	- Various man xslt additions
+
 2004-11-17  Marco Pesenti Gritti  <marco@gnome.org>
 
 	* data/Makefile.am:
