Added X-GNOME-Bugzilla-Version support for bug-buddy love

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-11-21  Christoffer Olsen  <co@deworks.net>
+
+	* po/POTFILES.in: Replaced yelp.desktop.in with yelp.desktop.in.in
+	* yelp.desktop.in: Moved to yelp.desktop.in.in
+	* yelp.desktop.in.in: Added X-GNOME-Bugzilla-Version
+	* configure.in: Added yelp.desktop.in.in to AC_OUTPUT
+
 2004-11-21  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/man2html.xsl:
