- Patch from Quinn Kronifontes to add logo to about dialog
* src/yelp-window.c:
- Patch from Quinn Kronifontes to add logo to about dialog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-21  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Patch from Quinn Kronifontes to add logo to about dialog
+
 2004-11-21  Christoffer Olsen  <co@deworks.net>
 
 	* po/POTFILES.in: Replaced yelp.desktop.in with yelp.desktop.in.in
