Updated Danish translation.
        * da.po: Updated Danish translation.

--- a/po/da.po
+++ b/po/da.po
@@ -1,14 +1,17 @@
 # Danish translation of Yelp.
 # Copyright (C) 2002, 03, 04 Free Software Foundation, Inc.
+# This file is distributed under the same license as the yelp package.
 # Ole Laursen <olau@hardworking.dk>, 2002, 03, 04.
+#
+# Husk at tilføje dig i credit-listen (besked id "translator_credits")
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 0.1\n"
+"Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-10-11 23:54-0500\n"
-"PO-Revision-Date: 2004-03-14 21:13+0100\n"
-"Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
+"POT-Creation-Date: 2004-11-23 14:24+0100\n"
+"PO-Revision-Date: 2004-11-23 14:24+0100\n"
+"Last-Translator: Martin Willemoes Hansen <mwh@sysrq.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -383,7 +386,12 @@ msgstr "Indlæser..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1304
 msgid "translator_credits"
-msgstr "Ole Laursen <olau@hardworking.dk>"
+msgstr ""
+"Martin Willemoes Hansen\n"
+"Ole Laursen\n"
+"\n"
+"Dansk-gruppen <dansk@klid.dk>\n"
+"Mere info: http://www.klid.dk/dansk/"
 
 #: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
@@ -527,7 +535,7 @@ msgstr "Redigeringsprogram"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr "Epost"
+msgstr "E-post"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
