Added "nso" to ALL_LINGUAS. Added Northern Sotho translation by Zuza
2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "nso" to ALL_LINGUAS.
	* po/nso.po: Added Northern Sotho translation by
	Zuza Software Foundation <info@translate.org.za>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* configure.in: Added "nso" to ALL_LINGUAS.
+
 2004-11-21  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
